# nube-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
skills/abandoned-checkouts/: SKILL.md
skills/category-management/: SKILL.md
skills/coupon-management/: SKILL.md
skills/customer-management/: SKILL.md
skills/order-management/: SKILL.md
skills/page-management/: SKILL.md
skills/product-management/: SKILL.md
skills/store-overview/: SKILL.md
skills/troubleshooting/: SKILL.md
src/nube_agent/: agent.py  api.py  config.py  main.py  subagents.py
src/nube_agent/prompts/: __init__.py  system_prompt.txt
src/nube_agent/tools/: __init__.py  abandoned_checkouts.py  categories.py  coupons.py  customers.py  images.py  orders.py  pages.py  products.py  store.py  variants.py
tests/: conftest.py  test_agent.py  test_api.py  test_config.py  test_tools_abandoned_checkouts.py  test_tools_categories.py  test_tools_coupons.py  test_tools_customers.py  test_tools_images.py  test_tools_orders.py  test_tools_pages.py  test_tools_products.py  test_tools_store.py  test_tools_variants.py
