[project]
name = "nube-agent"
version = "0.1.0"
description = "CLI conversational agent for managing Nuvemshop/Tiendanube stores"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
nube-agent = "nube_agent.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "respx>=0.21", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["src/nube_agent"]
